# hashcode20

./: .gitignore  Makefile  README.md  hashcode20.opam  opamswitch
src/common/: common.ml  config.ml  dune  extPervasives.ml  logger.ml  problem.ml  solution.ml  solver.ml
src/exe/: dune  engine.ml  io.ml  main.ml
src/solvers/: dummy.ml  dune  greedy.ml  niols.ml  solvers.ml
